src/App.css
/* ... */
@font-face {
  font-family: 'Montserrat';
  src: local('Montserrat'), url(./assets/fonts/Montserrat-SemiBold.ttf) format('truetype');
  font-weight: 600;
}
@font-face {
  font-family: 'Montserrat';
  src: local('Montserrat'), url(./assets/fonts/Montserrat-Bold.ttf) format('truetype');
  font-weight: 700;
}
@font-face {
  font-family: 'Roboto';
  src: local('Roboto'), url(./assets/fonts/Roboto-Light.ttf) format('truetype');
  font-weight: 300;
}
@font-face {
  font-family: 'Roboto';
  src: local('Roboto'), url(./assets/fonts/Roboto-Regular.ttf) format('truetype');
  font-weight: 400;
}

body{
  margin: 0;
  width: 100vw;
  overflow-x: hidden;
}

body.no-scroll{
  /* height: 100vh; */
  overflow-y: hidden;
  /* background-color: red; */
}

.fade-enter {
  opacity: 0;
  z-index: 1;
}

.fade-enter.fade-enter-active {
  opacity: 1;
  transition: opacity 250ms ease-in;
}

.row{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
}

.column{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.app{
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.content {
  flex: 1 0 auto;
}

.container{
  width: 90vw;
  margin: 0 auto;
}

.logo{
  /* width: 180px; */
  width: 140px;

}

.logo-big{
  width: 220px;
}

/* TopSection Styles */
.top-section-default{
  background-color: #2A3D4C;
  /* position: relative; */
}

.top-section.img{
  /* background-image: url('./assets/img/7.jpg'); */
  /* background-size: 100% 100%; */
  /* background-size: cover; */
  /* background-repeat: no-repeat; */
  height: 95vh;
  /* animation: animationIn .25s ease-in forwards; */
  /* animation-name: background;
  animation-duration: 15s;
  animation-timing-function: linear;
  animation-iteration-count: infinite; */
}

.crossfade{
  background-size: cover;
  height: 95.1vh;
  position: absolute;
  width: 100%;
  top: 0px;
  left: 0px;
  color: transparent;
  opacity: 0;
  z-index: 0;
  -webkit-backface-visibility: hidden;
  -webkit-animation: imageAnimation 24s linear infinite 0s;
  -moz-animation: imageAnimation 24s linear infinite 0s;
  -o-animation: imageAnimation 24s linear infinite 0s;
  -ms-animation: imageAnimation 24s linear infinite 0s;
  animation: imageAnimation 24s linear infinite 0s; 
}

.bg1{
  background-image: url('./assets/img/shipLarge.jpg');
}

.bg2{
  background-image: url('./assets/img/7.jpg');
  -webkit-animation-delay: 8s;
    -moz-animation-delay: 8s;
    -o-animation-delay: 8s;
    -ms-animation-delay: 8s;
    animation-delay: 8s; 
}
.bg3{
  background-image: url('./assets/img/bfLarge2.jpg');
  -webkit-animation-delay: 16s;
  -moz-animation-delay: 16s;
  -o-animation-delay: 16s;
  -ms-animation-delay: 16s;
  animation-delay: 16s; 
}

@-webkit-keyframes imageAnimation { 
  0% {opacity: 0;}
  5% {opacity: 1;}
  33% {opacity: 1;}
  43% {opacity: 0;}
  100% {opacity: 0;}
}

@-moz-keyframes imageAnimation { 
  0% {opacity: 0;}
  5% {opacity: 1;}
  33% {opacity: 1;}
  43% {opacity: 0;}
  100% {opacity: 0;}
}

@-o-keyframes imageAnimation { 
  0% {opacity: 0;}
  5% {opacity: 1;}
  33% {opacity: 1;}
  43% {opacity: 0;}
  100% {opacity: 0;}
}

@-ms-keyframes imageAnimation { 
  0% {opacity: 0;}
  5% {opacity: 1;}
  33% {opacity: 1;}
  43% {opacity: 0;}
  100% {opacity: 0;}
}

@keyframes imageAnimation { 
  0% {opacity: 0;}
  5% {opacity: 1;}
  33% {opacity: 1;}
  43% {opacity: 0;}
  100% {opacity: 0;}
}

@keyframes animationIn {
  0%{
    opacity: 0;
  }
  100%{
    opacity: 1;
  }
}

.top-section-text{
  text-align: left;
  /* position: absolute; */
  /* left: 50%;
  top: 57%; */
  /* transform: translate(-50%, -50%); */
  animation: animationIn .25s ease-in forwards;
  align-items: flex-start;
  height: calc(95vh - 100px);
  padding-left: 50px;
}

.top-section-text.bf{
  justify-content: flex-start;
  padding-top: 100px;
}

.top-section-box{
  position: relative;
}

.box{
  width: 8px;
  height: 43px;
  background-color: #5D9AAF;
  position: absolute;
  top: 16px;
  left: -16px;
  z-index: 0;
}

.top-section-text h1{
  color: #2A3D4C;
  font-family: 'Montserrat';
  font-weight: 700;
  font-size: 60px;
  margin: 0 0 15px 0;
  width: 500px;
}

.top-section-text p{
  margin: 0;
  color: #2A3D4C;
  font-family: 'Roboto';
  font-weight: 400;
  font-size: 22px;
  width: 430px;
}

/* Navbar Styles */
.navbar{
  height: 80px;
  justify-content: space-between;
  padding: 10px 40px 10px 20px;
  /* border: 1px solid red; */
}

.navbar.home .menu{
  width: 530px;
}

.navbar.home .menu a{
  /* border-bottom: 2px solid #1A2934; */
  color: #2A3D4C;
  letter-spacing: 1px;
  font-weight: 600;
}

.menu{
  /* width: 561px; */
  width: 530px;
  justify-content: space-between;
  font-family: 'Montserrat';
  font-weight: 500;
}

.menu a{
  text-decoration: none;
  font-size: 16px;
  color: #D5EDFF;
  /* letter-spacing: 2px; */
  transition: .2s;
  letter-spacing: 1px;
  font-weight: 600;
}

.menu a:hover{
  color: white;
}

.menu a.selected{
  color: white;
}

.hamburger-menu{
  /* width: 50px; */
  /* position: absolute;
  right: 5%;
  top: 0; */
  /* right: 0; */
  /* margin-left: auto; */
  /* height: 50px; */
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  /* z-index: 2; */
  transition: all .5s ease;
  /* cursor: pointer; */
  display: none;
}

.menu-side{
  margin-top: 100px;
}

.menu-side a{
  font-family: 'Roboto';
  font-weight: 400;
  text-decoration: none;
  font-size: 32px;
  color: #D2EAFC;
  margin: 30px 0;
  height: 100%
}

/* fixed hamburger menu */
.hamburger-box{
  position: absolute;
  right: calc(5vw + 20px);
  /* background-color: white; */
  /* position: absolute;
  right: 5%;
  top: 5%;*/
  z-index: 2;
  transition: all .5s ease;
  display: none;
  height: 35px;
  width: 35px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
/* ... */

